--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -21,3 +21,9 @@ dependencies:
   galaxy:
     collections:
     - ansible.utils
+
+additional_build_steps:
+  append_base:
+    - ENV timmay_lab_version=v2.0
+    - RUN curl -o /runner/release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
+
