--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -31,8 +31,8 @@ dependencies:
 
 additional_build_steps:
   prepend_base:
-    - RUN yum -y update && yum install -y curl
+    - RUN yum -y update && yum install -y curl --allowerasing
   append_base:
-    - ENV timmay_lab_version=v2.31
+    - ENV timmay_lab_version=v2.32
     - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
 
