--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -30,9 +30,9 @@ dependencies:
 
 
 additional_build_steps:
-  prepend_base:
-    - RUN yum -y update && yum install -y curl --allowerasing
+#  prepend_base:
   append_base:
-    - ENV timmay_lab_version=v2.32
+    - ENV timmay_lab_version=v2.33
+    - RUN yum -y update && yum install -y curl --allowerasing
     - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
 
