--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -2,7 +2,6 @@ version: 3
 
 images:
   base_image:
-    # completely vanilla image, works with most anything RHELish (Fedora, CentOS Stream)
     # name: registry.access.redhat.com/ubi9/ubi:latest
     name: localhost/awx-ee:latest
 
@@ -32,7 +31,7 @@ dependencies:
 additional_build_steps:
 #  prepend_base:
   append_base:
-    - ENV timmay_lab_version=v2.33
-    - RUN yum -y update && yum install -y curl --allowerasing
+    - ENV timmay_lab_version=v2.34
+#    - RUN yum -y update && yum install -y curl --allowerasing
     - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
 
