--- a/release-notes.json
+++ b/release-notes.json
@@ -9,9 +9,10 @@
         "version": "2.3x",
         "release_date": "February 3, 2025",
         "details": [
+          "release-notes.json is not on the filesystem",
           "added prepend_build & yum curl to exec-env",
           "ans_buld shows the curl command working but the release-notes file is not there",
-          "test v2.34a - ans_buld time without curl ()",
+          "test v2.34a - ans_buld time without curl (1.49)",
           "test v2.34b - ans_buld time without curl ()",
           "test v2.35a - ans_buld time with curl in prepend_base ()",
           "test v2.35b - ans_buld time with curl in prepend_base ()",
@@ -23,7 +24,7 @@
         "version": "2.2",
         "release_date": "February 3, 2025",
         "details": [
-          "Updated exec-env to use quay.",
+          "Updated exec-env to use localhost/awx-ee.",
           "commented out a lot of stuff"
         ]
       },
