--- a/release-notes.json
+++ b/release-notes.json
@@ -13,7 +13,7 @@
           "added prepend_build & yum curl to exec-env",
           "ans_buld shows the curl command working but the release-notes file is not there",
           "test v2.34a - ans_buld time without curl (1.49)",
-          "test v2.34b - ans_buld time without curl ()",
+          "test v2.34b1 - ans_buld time without curl ()",
           "test v2.35a - ans_buld time with curl in prepend_base ()",
           "test v2.35b - ans_buld time with curl in prepend_base ()",
           "test v2.36a - ans_buld time with curl in append_base ()",
