--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -20,8 +20,8 @@ dependencies:
     # anything valid to `pip install` - a git ref, whatever 
     package_pip: ansible-core<2.16
 
-#  ansible_runner:
-#    package_pip: ansible-runner
+  ansible_runner:
+    package_pip: ansible-runner
 
 #  galaxy:
 #    collections:
