--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -2,8 +2,9 @@ version: 3
 
 images:
   base_image:
-    name: registry.access.redhat.com/ubi9/ubi:latest
-    #name: localhost/awx-ee:latest
+    # name: registry.access.redhat.com/ubi9/ubi:latest
+    name: registry.redhat.io/ansible-automation-platform/ee-minimal-rhel8
+    # name: localhost/awx-ee:latest
 
 dependencies:
   # install and use a bleeding-edge Python!  https://devguide.python.org/versions/
