--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -3,7 +3,7 @@ version: 3
 images:
   base_image:
     # name: registry.access.redhat.com/ubi9/ubi:latest
-    name: registry.redhat.io/ansible-automation-platform/ee-minimal-rhel8
+    name: registry.redhat.io/ansible-automation-platform/ee-minimal-rhel8:latest
     # name: localhost/awx-ee:latest
 
 dependencies:
