--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -29,9 +29,10 @@ dependencies:
 
 additional_build_steps:
   prepend_base:
-     - yum install -y git
+     - RUN yum install -y git
 #    - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
 #  append_base:
+
 #    - ENV timmay_lab_version=v2.34b1
 #    - RUN yum -y update && yum install -y curl --allowerasing
 #    - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
