--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -2,5 +2,6 @@ version: 3
 
 images:
   base_image:
-    name: registry.access.redhat.com/ubi9/ubi:latest
+    name: quay.io/ansible/awx-ee:latest
+
  
