--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -4,4 +4,11 @@ images:
   base_image:
     name: quay.io/ansible/awx-ee:latest
 
+  dependencies:
+  python_interpreter:
+    package_system: python3.11
+    python_path: /usr/bin/python3.11
+
+  ansible_core:
+    package_pip: ansible-core<2.16
  
