--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -2,7 +2,10 @@ version: 3
 
 images:
   base_image:
-    name: quay.io/ansible/awx-ee:latest
+    #name: quay.io/ansible/awx-ee:latest
+    name: quay.io/ansible/awx-ee-minimal:latest
+    # name: quay.io/centos/centos:stream9  # vanilla image
+
 
 dependencies:
 #  system: bindep.txt
