--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -3,8 +3,7 @@ version: 3
 images:
   base_image:
     #name: quay.io/ansible/awx-ee:latest
-    name: quay.io/ansible/awx-ee-minimal:latest
-    # name: quay.io/centos/centos:stream9  # vanilla image
+    name: quay.io/centos/centos:stream10  # vanilla image
 
 
 dependencies:
