--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -7,6 +7,8 @@ images:
 
 
 dependencies:
-#  system: bindep.txt
+  ansible_core:
+    package_pip: ansible-core
+  #  system: bindep.txt
   python: requirements.txt
  
