--- a/execution-environment.yaml
+++ b/execution-environment.yaml
@@ -2,7 +2,7 @@ version: 3
 
 images:
   base_image:
-    name: quay.io/centos/centos:stream9  # vanilla image
+    name: quay.io/centos/centos:stream9
 
 
 dependencies:
