--- a/execution-environment.old.yaml
+++ b/execution-environment.old.yaml
@@ -2,44 +2,20 @@ version: 3
 
 images:
   base_image:
-    name: registry.access.redhat.com/ubi9/ubi:latest
-    # name: localhost/awx-ee:latest
-    # name: quay.io/ansible/awx-ee-minimal:latest
-    # name: registry.redhat.io/ansible-automation-platform/ee-minimal-rhel8:latest
-    # name: quay.io/centos/centos:stream9  # vanilla image
- 
-  dependencies:
-  python_interpreter:
-    # (optional) provide the name of an OS package to install
-    package_system: python3.11
-    # (optional) provide the path of the Python interpreter to use for everything else.
-    # defaults to /usr/bin/python3; we'll do some sanity checking with this later...
-    python_path: /usr/bin/python3.11
+    name: quay.io/centos/centos:stream9
 
+
+dependencies:
   ansible_core:
-    # anything valid to `pip install` - a git ref, whatever 
-    package_pip: ansible-core<2.16
-
+    package_pip: ansible-core
   ansible_runner:
     package_pip: ansible-runner
 
-  galaxy:
-    collections:
-    - ansible.utils
-
-additional_build_files:
-  # copy arbitrary files next to this EE def into the build context - we can refer to them later...
-  - src: release-notes.json
-    dest: configs
-
 additional_build_steps:
-  prepend_base:
-     - COPY _build/configs/release-notes.json /release-notes.json
-     - RUN yum install -y git
-#    - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
-  append_base:
+  prepend:
+    - RUN dnf install -y podman ansible-builder
+    - RUN echo "root:100000:65536" >> /etc/subuid
+    - RUN echo "root:100000:65536" >> /etc/subgid
+    - RUN mount --make-shared /
 
-#    - ENV timmay_lab_version=v2.34b1
-#    - RUN yum -y update && yum install -y curl --allowerasing
-#    - RUN curl -o /release-notes.json https://raw.githubusercontent.com/timmayg/timmay-lab/main/release-notes.json
 
